--- a/BackEnd/apache/pom.xml
+++ b/BackEnd/apache/pom.xml
@@ -6,11 +6,13 @@
 
     <groupId>org.apache.commons</groupId>
     <artifactId>apache</artifactId>
+    <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+    
 
 </project>
