--- a/BackEnd/JAVA_FILES/pom.xml
+++ b/BackEnd/JAVA_FILES/pom.xml
@@ -46,7 +46,19 @@
 		   <version>5.8</version>
 		   <scope>compile</scope>
 	   </dependency>
+	   <dependency>
+    	<groupId>org.json</groupId>
+    	<artifactId>json</artifactId>
+    	<version>20230618</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.14</version>
+		</dependency>
+
   </dependencies>
+  
   
   
   
