--- a/BackEnd/JAVA_FILES/pom.xml
+++ b/BackEnd/JAVA_FILES/pom.xml
@@ -59,6 +59,33 @@
 			<version>4.5.14</version>
 		</dependency>
 		
+		<dependency>
+    		<groupId>net.glxn</groupId>
+    		<artifactId>qrgen</artifactId>
+    		<version>1.4</version>
+		</dependency>
+	
+	    <dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
+		</dependency>
+		
+		<dependency>  
+			<groupId>com.google.zxing</groupId>  
+			<artifactId>core</artifactId>  
+			<version>3.3.0</version>  
+		</dependency>  
+		<dependency>  
+			<groupId>com.google.zxing</groupId>  
+			<artifactId>javase</artifactId>  
+			<version>3.3.0</version>  
+		</dependency>  
+  
+		
+
+
+		
   </dependencies>
   
   
