--- a/BackEnd/JAVA_FILES/pom.xml
+++ b/BackEnd/JAVA_FILES/pom.xml
@@ -81,14 +81,17 @@
 			<artifactId>javase</artifactId>  
 			<version>3.3.0</version>  
 		</dependency>  
-  
-		
+		<dependency>
+		    <groupId>com.sparkjava</groupId>
+		    <artifactId>spark-core</artifactId>
+		    <version>2.9.4</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.10.1</version>
+		</dependency>
 
-
-		
   </dependencies>
-  
-  
-  
   
 </project>
