--- a/BackEnd/JAVA_FILES/pom.xml
+++ b/BackEnd/JAVA_FILES/pom.xml
@@ -97,6 +97,19 @@
 		<artifactId>gson</artifactId>
 		<version>2.10.1</version>
 	</dependency>
+	<dependency>
+    	<groupId>com.fasterxml.jackson.core</groupId>
+    	<artifactId>jackson-databind</artifactId>
+    	<version>2.16.0-rc1</version>
+ 	</dependency>
+	<dependency>
+    <groupId>com.fasterxml.jackson</groupId>
+    	<artifactId>jackson-bom</artifactId>
+    	<version>2.16.0-rc1</version>
+    	<type>pom</type>
+	</dependency>
+
+
 
   </dependencies>
   
