--- a/BackEnd/JAVA_FILES/pom.xml
+++ b/BackEnd/JAVA_FILES/pom.xml
@@ -97,6 +97,14 @@
 		<artifactId>gson</artifactId>
 		<version>2.10.1</version>
 	</dependency>
+	<dependency>
+    <groupId>org.eclipse.jetty</groupId>
+    <artifactId>jetty-servlet</artifactId>
+    <version>11.0.18</version>
+	</dependency>
+
+
+
 
   </dependencies>
   
