--- a/BackEnd/JAVA_FILES/pom.xml
+++ b/BackEnd/JAVA_FILES/pom.xml
@@ -114,6 +114,11 @@
     	<version>2.16.0-rc1</version>
     	<type>pom</type>
 	</dependency>
+	<dependency>
+    <groupId>org.apache.clerezza.ext</groupId>
+    <artifactId>org.json.simple</artifactId>
+    <version>0.4</version>
+	</dependency>
 
 
 
